--- a/frontend/src/components/Calendar/Calendar.css
+++ b/frontend/src/components/Calendar/Calendar.css
@@ -2,10 +2,10 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 1rem;
   }
   
   #calendar {
-    max-width: 1100px;
-    margin: 40px auto;
+    max-width: 75%;
+    margin: 2rem auto;
   }
