--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -89,3 +89,11 @@ button:hover {
   font-size: 2rem;
   padding-bottom: 3rem;
 }
+
+
+.calendar-and-button-container{
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
