--- a/frontend/src/components/Calendar/Calendar.css
+++ b/frontend/src/components/Calendar/Calendar.css
@@ -19,20 +19,7 @@ body > div { /* the react root */
   height: 100%;
 }
 
-h2 {
-  margin: 0;
-  font-size: 16px;
-}
 
-ul {
-  margin: 0;
-  padding: 0 0 0 1.5em;
-}
-
-li {
-  margin: 1.5em 0;
-  padding: 0;
-}
 
 b { /* used for event dates/times */
   margin-right: 3px;
@@ -44,7 +31,7 @@ b { /* used for event dates/times */
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-size: 14px;
 }
-
+/* 
 .demo-app-sidebar {
   width: 300px;
   line-height: 1.5;
@@ -54,7 +41,7 @@ b { /* used for event dates/times */
 
 .demo-app-sidebar-section {
   padding: 2em;
-}
+} */
 
 .demo-app-main {
   flex-grow: 1;
