--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+/* @import "../node_modules/primeng/resources/primeng.min.css"; */
+/* @import "../node_modules/primeflex/primeflex.scss"; */
+/* @import "../node_modules/primeicons/primeicons.css"; */
+/* @import "../node_modules/@fullcalendar/core/main.min.css"; */
+/* @import "../node_modules/@fullcalendar/daygrid/main.min.css"; */
+/* @import "../node_modules/@fullcalendar/timegrid/main.min.css"; */
+
+
 
 *,
 *::before,
