--- a/frontend/src/components/Calendar/Calendar.css
+++ b/frontend/src/components/Calendar/Calendar.css
@@ -26,12 +26,12 @@ b { /* used for event dates/times */
 }
 
 .demo-app {
-  display: flex;
+  
   min-height: 100%;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-size: 14px;
 }
-/* 
+
 .demo-app-sidebar {
   width: 300px;
   line-height: 1.5;
@@ -41,7 +41,7 @@ b { /* used for event dates/times */
 
 .demo-app-sidebar-section {
   padding: 2em;
-} */
+}
 
 .demo-app-main {
   flex-grow: 1;
