--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -119,3 +119,16 @@ button:hover {
   width: 50%;
   padding: 8rem;
 }
+
+.vertical-flex{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
+  align-items: center;
+}
+
+.pto{
+  display: flex; 
+  justify-content: space-around;
+}
