simplified edit / delete request from employee side

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -140,3 +140,13 @@ button:hover {
   gap: 4rem;
   justify-content: center;
 }
+/* .toast-message{
+  background: rgb(81, 81, 126);
+    color: #fff;
+} */
+
+.align-buttons-horizontal{
+  display: flex; 
+  justify-content: space-between;
+  padding-top: 2rem;
+}
