--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -158,3 +158,70 @@ button:hover {
   justify-content: center;
   align-items: center;
 }
+
+.flex-for-add-staff{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box{
+  width: 60%;
+}
+#form{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  justify-items: center;
+  align-content: center;
+  align-items: top;
+  row-gap: 1rem;
+  justify-content: center;
+  margin-bottom: 10rem;
+  padding: 2rem;
+  
+}
+
+
+
+.label-columns{
+  display: flex;
+  flex-basis: 1; 
+  flex-shrink: 2;
+ grid-column: 1/4;
+ grid-row: 1;
+}
+
+/* .table-form{
+  display: flex; 
+  justify-content: space-around;
+  flex-direction: column;
+  
+} */
+.buttons-table{
+  display: flex; 
+  justify-content: center;
+  gap: 2rem;
+  
+}
+.input-for-form{
+  grid-column: 1/4;
+  grid-row: 2;
+  display: flex;
+  padding: .5rem;
+  margin: .5rem;
+  max-width: 8rem;
+}
+
+.buttons-vertical-close{
+    display: flex; 
+    justify-content: baseline;
+    margin-top: 2rem;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.form-button{
+  grid-column: 4;
+  grid-row: 3;
+}
