--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,3 +1,17 @@
+
+
+@font-face {
+  font-family: "Bold Itlic";   /*Can be any text*/
+  src: local("PTSans-BoldItalic"),
+    url("../../media/PTSans-BoldItalic.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Bold-Italic";   /*Can be any text*/
+  src: local("PTSans-BoldItalic"),
+    url("../../media/PTSans-BoldItalic.ttf") format("truetype");
+}
+
 ul {
   display: flex;
   justify-content: space-between;
@@ -6,10 +20,12 @@ ul {
 
 li {
   font-size: 1.25rem;
+  font-family: "Bold-Italic";
+
 }
 
 .navBar {
-  background: steelblue;
+  background: #41B3A3;
   box-shadow: 4px 2px 5px gray;
   color: white;
   margin-bottom: 2rem;
@@ -17,10 +33,15 @@ li {
 }
 
 .navBar button {
-  background: transparent;
+  background: #E27D60;
+  border-radius: 20rem;
   border: 2px solid white;
   color: white;
-  padding: 0.4rem 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0;
+  padding-bottom: 0; 
+  margin-left: 1rem;
 }
 
 .navBar button:hover {
@@ -33,3 +54,4 @@ li {
   cursor: pointer;
   font-size: 2rem;
 }
+
