--- a/frontend/src/pages/LoginPage/LoginPage.css
+++ b/frontend/src/pages/LoginPage/LoginPage.css
@@ -1,3 +1,20 @@
 .error {
   color: red;
 }
+
+.container{
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+.form-container{
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 4rem;
+}
+
+.item{
+  padding: 1rem;
+}
