--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,6 +60,38 @@
 
 }
 
+.same-page-link{
+  text-align: center;
+  color: white;
+  text-decoration: underline;
+  background-color: #41B3A3; 
+  border-radius: 20rem;
+  padding: .5rem;
+}
+
+
+
+.background {
+  width:100vw;
+  height:100vh;
+  border:1px solid;
+  background:
+    radial-gradient(farthest-side,yellow 32%,yellow 90% ,purple 93%, purple 96%,transparent) left center/60px 60px,
+    radial-gradient(farthest-side,yellow 96%,transparent) bottom left/80px 80px,
+    radial-gradient(farthest-side,green  96%,transparent) top right/80px 80px,
+    radial-gradient(farthest-side,blue   96%,transparent) 100px 50px/100px 100px,
+    radial-gradient(farthest-side,red    96%,transparent) top left/40px 40px;
+    /* the circle                                          position / size */
+  background-repeat:no-repeat;
+}
+
+
+
+
+
+
+
+
 
 *,
 *::before,
