--- a/frontend/src/pages/LandingPage/LandingPage.css
+++ b/frontend/src/pages/LandingPage/LandingPage.css
@@ -1,61 +1,91 @@
-.error {
-    color: red;
-  }
-  
-  .subtitle-container{
-    grid-column: 5 / span 2;
-    grid-row: 1 / span 5;
-    margin: auto; 
-  }
-  
-  .item{
-    padding: 1rem;
-    text-align: center;
-  }
-  
-  .circles-grid {
-    display: grid; 
-    grid-template-areas: 
-              "1 2 3 4 5 6 7"
-              "8 9 10 11 12 13 14"
-              "15 16 17 18 19 20 21"
-              "22 23 24 25 26 27 28"
-              "29 30 31 32 33 34 35"
-              "36 37 38 39 40 41 42"
-              "43 44 45 46 47 48 49";
-    width: 100%;
-    height: 100%;
-    grid-template-columns: repeat(7, minmax(0, 1fr));
-    grid-template-rows: repeat(7, minmax(0, 1fr));
-    justify-items: center;
-    align-items: center;
-  }
-  
-  .circle-1 {
-    background-color: #4e65e6;
-    border-radius: 50%;
-    grid-column: 1 / span 4;
-    grid-row: 1 / span 6;
-    height: 100%;
-    width: 100%;
-    margin-left: -30%;
-    margin-top: -50%;
-    z-index: -1; 
-    border-width: 10px;
-    border-color: #fabb3d;
-    border-style: solid;
-  }
-  
-  .line {
-    display: flex; 
-    width: 100%; 
-    border-width: 5px;
-    border-style: solid; 
-    border-color: #fabb3d;
-    grid-column: 1 / span 7;
-    grid-row: 2;
-  }
+.component-container {
+  position: fixed; 
+  background: #2812d0;
+  z-index: -10;
+  height: 100%;
+}
 
-  .title-container {
-    display: flex; 
-  }
+.item{
+  padding: 1rem;
+  text-align: center;
+}
+
+.title-container {
+  display: flex; 
+}
+
+.circles-grid {
+  display: grid; 
+  grid-template-areas: 
+            "1 2 3 4 5 6 7"
+            "8 9 10 11 12 13 14"
+            "15 16 17 18 19 20 21"
+            "22 23 24 25 26 27 28"
+            "29 30 31 32 33 34 35"
+            "36 37 38 39 40 41 42"
+            "43 44 45 46 47 48 49";
+  width: 100%;
+  height: 100%;
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+  grid-template-rows: repeat(7, minmax(0, 1fr));
+  justify-items: center;
+  align-items: center;
+}
+
+.circle-1 {
+  background-color: #4e4efb;
+  border-radius: 50%;
+  grid-column: 1 / span 5;
+  grid-row: 1 / span 6;
+  height: 100%;
+  width: 100%;
+  margin-left: -60%;
+  margin-top: -50%;
+  z-index: -1; 
+  border-width: 10px;
+  border-color: #e27d60;
+  border-style: solid;
+}
+
+.circle-2 {
+  background-color: #4e4efb;
+  border-radius: 50%;
+  grid-column: 3 / span 5;
+  grid-row: 3 / span 5;
+  height: 100%;
+  width: 100%;
+  margin-right: -40%;
+  margin-bottom: -65%;
+  z-index: -1; 
+  border-width: 10px;
+  border-color: #e27d60;
+  border-style: solid;
+}
+
+.splash-large-1 {
+  grid-column: 1 / span 2;
+  grid-row: 2 / span 2;
+  /* padding-right: 20%; */
+  padding-left: 35%;
+  font-size: 2.5em;
+}
+
+.splash-large-2 {
+  grid-column: 4 / span 4;
+  grid-row: 6 / span 2;
+  padding: 10% 2% 0 10%;
+  max-width: 80%;
+}
+
+.splash-medium {
+  grid-column: 4 / span 2;
+  grid-row: 2 / span 5;
+  margin: auto; 
+  color: white;
+  font-size: 2em;
+  /* padding: 0 0 0 20%; */
+  max-width: 60%;
+}
+.error {
+  color: red;
+}
