--- a/frontend/src/components/NavBar/NavBarPagesOriginal.css
+++ b/frontend/src/components/NavBar/NavBarPagesOriginal.css
@@ -1,30 +1,30 @@
 
 
-@font-face {
-  font-family: "Bold Itlic";   /*Can be any text*/
+/* @font-face {
+  font-family: "Bold Itlic";   Can be any text
   src: local("PTSans-BoldItalic"),
     url("../../media/PTSans-BoldItalic.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "Bold-Italic";   /*Can be any text*/
+  font-family: "Bold-Italic";   Can be any text
   src: local("PTSans-BoldItalic"),
     url("../../media/PTSans-BoldItalic.ttf") format("truetype");
 }
 
-ul {
+.ul-pages {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
 }
 
-li {
+.li-pages {
   font-size: 1.25rem;
   font-family: "Bold-Italic";
 
 }
 
-.navBar {
+.navBar-pages {
   background: #41B3A3;
   box-shadow: 4px 2px 5px gray;
   color: white;
@@ -32,7 +32,7 @@ li {
   padding: 1.5rem 2rem;
 }
 
-.navBar button {
+.navBar-pages button {
   background: #E27D60;
   border-radius: 20rem;
   border: 2px solid white;
@@ -44,14 +44,14 @@ li {
   margin-left: 1rem;
 }
 
-.navBar button:hover {
+.navBar-pages button:hover {
   background: white;
   color: steelblue;
   cursor: pointer;
 }
 
-.brand {
+.brand-pages {
   cursor: pointer;
   font-size: 2rem;
-}
+} */
 
