--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -26,13 +26,10 @@
   
   .navBar {
     position: fixed; 
-    /* background: #1443cf; */
-    /* box-shadow: 4px 2px 5px rgb(0, 0, 0); */
     color: rgb(0, 0, 0);
-    margin-bottom: 2rem;
     padding: 5% 5% 0 5%;
-    z-index: 10;
     width: 100%;
+    z-index: 1;
 }
 
   .container {
@@ -40,6 +37,7 @@
     flex-direction: column; 
     align-items: stretch;
     height: 100%; 
+    background: transparent;
   }
 
   .line {
