--- a/frontend/src/pages/Landing/Landing.css
+++ b/frontend/src/pages/Landing/Landing.css
@@ -1,7 +1,7 @@
 .component-container {
   position: fixed; 
-  background: #2812d0;
-  z-index: -10;
+  /* background: #2812d0; */
+  z-index: -1;  
   height: 100%;
 }
 
@@ -15,31 +15,35 @@
 }
 
 .circles-grid {
+  position: fixed;
   display: grid; 
-  grid-template-areas: 
+  /* grid-template-areas: 
             "1 2 3 4 5 6 7"
             "8 9 10 11 12 13 14"
             "15 16 17 18 19 20 21"
             "22 23 24 25 26 27 28"
             "29 30 31 32 33 34 35"
             "36 37 38 39 40 41 42"
-            "43 44 45 46 47 48 49";
+            "43 44 45 46 47 48 49"; */
   width: 100%;
   height: 100%;
+  background: #2812d0;
   grid-template-columns: repeat(7, minmax(0, 1fr));
   grid-template-rows: repeat(7, minmax(0, 1fr));
   justify-items: center;
   align-items: center;
+  z-index: -1;
 }
 
 .circle-1 {
+  position: relative; 
   background-color: #4e4efb;
   border-radius: 50%;
   grid-column: 1 / span 5;
-  grid-row: 1 / span 6;
+  grid-row: 1 / span 10;
   height: 100%;
   width: 100%;
-  margin-left: -60%;
+  margin-left: -70%;
   margin-top: -50%;
   z-index: -1; 
   border-width: 10px;
@@ -48,6 +52,7 @@
 }
 
 .circle-2 {
+  position: relative; 
   background-color: #4e4efb;
   border-radius: 50%;
   grid-column: 3 / span 5;
@@ -67,6 +72,7 @@
   grid-row: 2 / span 2;
   /* padding-right: 20%; */
   padding-left: 35%;
+  padding-top: 10%;
   font-size: 2.5em;
 }
 
