--- a/frontend/src/pages/RegisterPage/RegisterPage.css
+++ b/frontend/src/pages/RegisterPage/RegisterPage.css
@@ -1,24 +1,159 @@
-.container{
+.register--grid {
+  display: grid; 
+  width: 100%;
+  height: 100%;
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+  grid-template-rows: repeat(7, minmax(0, 1fr));
+  justify-items: center;
+  align-items: center;
+  overflow: hidden;
+  background: transparent;
+}
+.register--background {
+  height: 100%;
+  width: 100%;
+  position: fixed; 
+  background: #2812d0;
+  /* z-index: -10; */
+}
+/* .register--background-clear {
+  height: 100%;
+  width: 100%;
+  position: fixed; 
+  background: transparent;
+  z-index: 0;
+} */
+.register--circle-1 {
+  background-color: #4e4efb;
+  border-radius: 50%;
+  grid-column: 1 / span 5;
+  grid-row: 1 / span 4;
+  height: 100%;
+  width: 100%;
+  margin-left: -60%;
+  margin-top: -40%;
+  z-index: -1; 
+  border-width: 10px;
+  border-color: #e27d60;
+  border-style: solid;
+}
+
+.register--circle-2 {
+  background-color: #4e4efb;
+  border-radius: 50%;
+  grid-column: 3 / span 5;
+  grid-row: 3 / span 4;
+  height: 100%;
+  width: 100%;
+  margin-right: -40%;
+  margin-bottom: -45%;
+  z-index: -1; 
+  border-width: 10px;
+  border-color: #e27d60;
+  border-style: solid;
+}
+
+.register--circle-3 {
+  border-radius: 50%;
+  height: 6vw;
+  width: 6vw;
+  border-width: 3px;
+  border-color: white;
+  border-style: solid;
+  grid-column: 1/span 2;
+  grid-row: 4 /span 3;
+}
+
+.register--circle-4 {
+  border-radius: 50%;
+  height: 6vw;
+  width: 6vw;
+  border-width: 3px;
+  border-color: white;
+  border-style: solid;
+  grid-column: 1/span 2;
+  grid-row: 5;
+  margin-left: 10%;
+  margin-top: 15%;
+}
+
+.register--circle-5 {
+  border-radius: 50%;
+  height: 6vw;
+  width: 6vw;
+  border-width: 3px;
+  border-color: white;
+  border-style: solid;
+  grid-column: 6/span 2;
+  grid-row: 3;
+}
+
+.register--circle-6 {
+  border-radius: 50%;
+  height: 6vw;
+  width: 6vw;
+  border-width: 3px;
+  border-color: white;
+  border-style: solid;
+  grid-column: 6/span 2;
+  grid-row: 1 /span 5;
+  margin-right: 15%;
+  margin-top: 10%;
+}
+
+.register--container {
     display: flex; 
-    align-items: center;
     justify-content: center;
-  }
-  .form-container{
-    display: flex; 
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 4rem;
-    max-width: 20rem;
+    margin-bottom: 5%;
+    max-height: 100vh;
+    grid-column: 3 / span 3;
+    grid-row: 1 / span 6;
+    border-radius: 25px;
+    height: 80%;
+    /* opacity: 100%; */
+    margin-top: 40%;
   }
   
-  .item{
-    padding: 1rem;
-  }
-  .item-input{
-    display: flex;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    max-width: 4rem;
-    text-align: center;
-  }
+.tv {
+  display: flex; 
+  align-items: flex-start;
+  justify-content: center;
+  margin: 2px;
+  overflow-y: scroll;
+  border-radius: 25px;
+    /* border: solid 3px transparent;
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(101deg, #2812d0, #e27d60);
+    box-shadow: 2px 1000px 1px white inset; */
+    /* grid-column: 3 / span 3;
+    grid-row: 1 / span 6; */
+    border: solid #e27d60 4px;
+    background: white;
+
+}
+
+.form-container {
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2%;
+  width: 100%;
+}
+
+.item {
+  display: flex; 
+  flex-direction: column;
+  padding: 1rem;
+  align-items: center;
+
+  
+}
+.item-input {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  max-width: 90%;
+  text-align: left;
+  box-shadow: 1px 1px 1px black;
+}
